--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -22,21 +22,46 @@
 \newcommand{\taskY}[1]{\todo[inline, color=red]{@Yens, fix: #1}}
 \newcommand{\taskV}[1]{\todo[inline, color=red]{@Victor, fix: #1}}
 
+\newcommand{\outline}[1]{\todo[inline, color=cyan]{\emph{Outline of what should come here}: #1}}
+
 \begin{document}
 \maketitle
 
 \section{Introduction}
 \subsection{Objectives}
+\outline{\proposalV{Investigate the performance changes between DynCNET/confirmation and CNET. \\ (bijbehorende question: what is the relative performance of cnet, confirmation and dyncnet)}}
 \subsection{Hypotheses}
+\outline{In profit: DynCNET better than Confirmation better than CNET \\ In messages: CNET better than confirmation better than DynCNET}
 
 \section{Theory}
+\outline{Theoretische uiteenzetting van wat in de drie relevante papers staat}
 
 \section{Multi-agent system design}
+\outline{Wat wij concreet doen}
 \subsection{Design}
+\outline{\begin{itemize}
+        \item drones leveren orders uit warehouses aan clients (1 order per client)
+        \item bid berekening (statistisch relevant)
+        \item messaging gedetailleerd bespreken of niet?
+    \end{itemize}}
 \subsection{Comparison with existing MAS from literature}
+\outline{
+    \begin{itemize}
+        \item warehouses oneindige capaciteit
+        \item tasks uit literature zijn orders bij ons
+        \item verschillen in messaging
+        \item concretere berekening bid
+        \item hier de state machines? (of eerder bij design)
+    \end{itemize}
+    }
 
 \section{Experiments}
 \subsection{Setup}
+\outline{\begin{itemize}
+        \item independent: aantal drones, warehouses, clients
+        \item dependent: profit, aantal clients delivered, aantal messages, delivery time, ... (\texttt{ExperimentResult})
+        \item other: battery drain, kost pakketjes, oplaadkost, ... (\texttt{Variables.kt})
+    \end{itemize}}
 \subsection{Results}
 \subsection{Analysis}
 
