Fix outline latex command

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -22,12 +22,13 @@
 \newcommand{\taskY}[1]{\todo[inline, color=red]{@Yens, fix: #1}}
 \newcommand{\taskV}[1]{\todo[inline, color=red]{@Victor, fix: #1}}
 
-\newcommand{\outline}[1]{\todo[inline, color=cyan]{\emph{Outline of what should come here}: #1}}
+\newcommand{\outline}[1]{\todo[inline, caption={}, color=cyan]{\emph{Outline of what should come here}: #1}}
 
 \begin{document}
 \maketitle
 
 \section{Introduction}
+\commentV{Zie https://bitbucket.org/VictorLP/mas/wiki/Notities}
 \subsection{Objectives}
 \outline{\proposalV{Investigate the performance changes between DynCNET/confirmation and CNET. \\ (bijbehorende question: what is the relative performance of cnet, confirmation and dyncnet)}}
 \subsection{Hypotheses}
