Add referentie naar PackageType.kt

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -86,7 +86,7 @@ We expect the profit to rise until the fines of not delivering start to become t
 \outline{\begin{itemize}
         \item independent: aantal drones, warehouses, clients
         \item dependent: profit, aantal clients delivered, aantal messages, delivery time, ... (\texttt{ExperimentResult})
-        \item other: battery drain, kost pakketjes, oplaadkost, ... (\texttt{Variables.kt})
+        \item other: battery drain, kost pakketjes, oplaadkost, ... (\texttt{Variables.kt} + \texttt{PackageType.kt})
     \end{itemize}}
 \subsection{Results}
 \subsection{Analysis}
