--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -61,6 +61,7 @@ We expect the profit to rise until the fines of not delivering start to become t
 
 \section{Theory}
 \outline{Theoretische uiteenzetting van wat in de drie relevante papers staat}
+\commentY{\cite{DynCNET}, \cite{CNET}, \cite{CNCP}, \cite{CNETStandard}}
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
@@ -80,6 +81,7 @@ We expect the profit to rise until the fines of not delivering start to become t
         \item hier de state machines? (of eerder bij design)
     \end{itemize}
     }
+\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}}
 
 \section{Experiments}
 \subsection{Setup}
@@ -92,5 +94,7 @@ We expect the profit to rise until the fines of not delivering start to become t
 \subsection{Analysis}
 
 \section{Conclusion}
+\bibliographystyle{plain}
+\bibliography{report}
 
 \end{document}
