--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -7,7 +7,7 @@
 \usepackage{todonotes}
 \usepackage{url}
 
-\title{Extensions on Contract-Net Protocol for AGVs \\ \normalsize Multi-agent systems}
+\title{Extensions on Contract Net Protocol for AGVs \\ \normalsize Multi-agent systems}
 
 \author{Jens Claes \and Victor Le Pochat}
 
@@ -65,11 +65,11 @@ We expect the profit to rise until the fines of not delivering start to become t
 \section{Theory}
 \outline{Theoretische uiteenzetting van wat in de drie relevante papers staat}
 \commentY{\cite{DynCNET}, \cite{CNET}, \cite{CNCP}, \cite{CNETStandard}}
-In this section we describe how the theory of Contract Net and its variations map unto our implementation. We start with the discussion of contract net itself and then move on to the changes in contract net with confirmation and dynamic contract net.
+In this section we describe how the theory of contract net and its variations map unto our implementation. We start with the discussion of CNET itself and then move on to how CNCP and DynCNET differ from CNET.
 
 \outline{\proposalY{State machines als agent architectures toevoegen?}}
 
-\subsection{Contract Net} There are two types of agents in our solution: Clients and Drones. Clients represents the task and fulfill the role of manager in contract net, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents\footnote{This includes other clients, which will ignore all calls for proposal. RinSim does not provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}, as all drones are eligible. No bid specification is provided, as this is known by the drones. There is also no expiration time, as drones should bid as quickly as they can.
+\subsection{Contract Net} There are two types of agents in our solution: Clients and Drones. Clients represent the task and fulfill the role of manager. While the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents\footnote{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}, as all drones are eligible. No bid specification is provided, as this is known by the drones. There is also no expiration time, as drones should bid as quickly as they can.
 
 When drones receive task announcements, they will calculate, for every warehouse, the estimated profit\footnote{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected\footnote{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter another state \texttt{PROPOSED\_BID} in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
 
@@ -77,7 +77,7 @@ When a client receives a bid, it will compare it to the other bids it got (if an
 
 Because drones won't bid if it is not economically interesting, all bids are satisfactory for the client.
 
-Once the drone has received the contract from the client, it will start executing it. Once it has picked up the package at the warehouse, it will inform the client of this. When it has delivered the package, it will also inform the client of this. In case the drone would crash, it would sent one last signal to the client to inform of this failure\footnote{In practice, a polling approach might be used instead.}.
+Once the drone has received the contract from the client, it will start executing it. Once it has picked up the package at the warehouse, it will inform the client of this. When it has delivered the package, it will also inform the client of this. In case the drone would crash, it would sent one last signal to the client to inform him of this failure\footnote{In practice, a polling approach might be used instead.}. This client would then send out a call for proposals again.
 
 As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or he did not get the contract. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As only 1 contract is possible, there is no need for a local scheduler within the drone.
 
@@ -85,12 +85,16 @@ To reduce the message count significantly, drones send explicit refuse messages 
 
 \subsection{Contract Net with Confirmation} The earlier solution suffers from 1 major flaw: drones have to commit to their bid until the client accepts or declines their bid. They are not allowed to bid on other task announcements while they have a bid outstanding. As their are $n$ drones and $m$ clients, $n*m$ bids are possible in theory. In practice, only $n$ bids are sent out. In the worst case, where all drones rank the clients in the same order $O(m)$ rounds of bidding are necessary to assign all clients to drones.
 
-In contract net with confirmation, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message should it commit to the bid. It case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery\footnote{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
+In CNCP, the drones are allowed to sent out multiple bids. Only when a drone receives an \texttt{AcceptProposal} message should it commit to the bid. It case it receives multiple bids, it can choose to which bid to commit. The client to which is committed is sent an \texttt{Agree} message. From that moment on, the drone starts executing the delivery\footnote{In \cite{CNCP} they first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the client, the \texttt{AcceptProposal} is sent. These two messages from the client to the drone are merged together in our design}. All other clients are sent a \texttt{Disagree} message. When a client receives a \texttt{Disagree} message, it will send out a new call for proposal. This behaviour differs from \cite{CNCP}: when a client receives proposals, it will rank them and send out an \texttt{AcceptProposal} to the first one. If the first drone declines, the second drone will be sent an \texttt{AcceptProposal} and so on, until all (satisfactory) drones are sent an \texttt{AcceptProposal}. Because of the short deadlines and the high chance that the second drone has in the mean time committed to another client, we preferred to start a new bidding round.
 \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?} 
 
-While the pure contract net with confirmation requires an extra $O(2*n)$ messages, our design only requires one extra message per bidding round. We believe the number of bidding rounds will be reduced drastically, and therefore the total message count as well.
+While CNCP as described in \cite{CNCP} requires an extra $O(2*n)$ messages, our design only requires one extra message per bidding round. We believe the number of bidding rounds will be reduced drastically, and therefore the total message count as well (compared to CNET).
 
-\subsection{Dynamic Contract Net}
+\subsection{Dynamic Contract Net} CNCP still suffers from one problem: while a drone is flying to the warehouse (and while he is charging in the warehouse before delivering the package), the world might change. Maybe another drone becomes available, or another client announces a new task. In both scenarios, it might be better to cancel the contract and start a new one. Neither CNET nor CNCP allow a drone or client to change a contract after they have committed to each other. In DynCNET, a drone can still cancel the contract, as long as it has not yet picked up the package in the warehouse. So if a better client comes along, a drone could cancel the old contract and start a new contract with this new client. Similarly, a client can break up the contract with a drone as long as this drone has not yet picked up the package. If a better drone becomes available (after it has delivered another package), the client might switch drones. It will let the old drone known that the contract has been canceled.
+
+This means that in practice, the client will keep sending calls for proposals until the drone has picked up the package. Similarly, the drone will keep bidding on task announcements until it picks up the package. From then on, both agents are 100\% committed to the contract.
+
+A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest. In our design, the agents are only limited by the battery constraint of the drones. We did not take special action to prevent the oscillation of tasks between drones.
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
@@ -110,7 +114,7 @@ While the pure contract net with confirmation requires an extra $O(2*n)$ message
         \item hier de state machines? (of eerder bij design)
     \end{itemize}
     }
-\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}}
+\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving}
 
 \section{Experiments}
 \subsection{Setup}
