--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -25,6 +25,8 @@
 
 \newcommand{\outline}[1]{\todo[inline, caption={}, color=cyan]{\emph{Outline of what should come here}: #1}}
 
+\graphicspath{ {./vpp/} }
+
 \begin{document}
 \maketitle
 
@@ -68,11 +70,32 @@ We expect the profit to rise until the fines of not delivering start to become t
 
 \section{Theory}
 \outline{Theoretische uiteenzetting van wat in de drie relevante papers staat}
-In this section we describe how the theory of contract net and its variations map unto our implementation. We start with the discussion of CNET itself and then move on to how CNCP and DynCNET differ from CNET.
+In this section we describe how the theory of multi-agent systems map onto our implementation. We first discuss the agent architecture of the drone and the client. Then we discuss the theory of contract net and its variations in CNCP and DynCNET.
 
-\outline{\proposalY{State machines als agent architectures toevoegen?}}
+\commentY{Hoort sectie over agent architecture hier?}
 
-\subsection{Contract Net} There are two types of agents in our solution: Clients and Drones. Clients represent the task and fulfill the role of manager. While the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents\footnote{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}, as all drones are eligible. No bid specification is provided, as this is known by the drones. There is also no expiration time, as drones should bid as quickly as they can.
+\subsection{Agent Architecture} Both the drone and client agents have very simple architectures. They can be modeled using simple finite state machines. 
+
+\commentY{FSM of toch proberen onderbrengen onder BDI/Reactive? BDI kan, maar hij probeert niet echt opnieuw (met lagere bieding) als hij intention heeft van bepaalde client. Al kunt ge zeggen dat intention pas is bij het binnenhalen van client. Reactive is er dan wrs weer te veel "state" voor.}
+
+Figure~\ref{fig:droneFSM} gives the FSM for the drone agent in the different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. It can enter this state from all other states and can never leave it again}. The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP or DynCNET. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. DynCNET also has two extra transitions: from \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} back to \texttt{IDLE} in case the client cancels the contract. CNCP and DynCNET also have the \texttt{gotContract} transition from \texttt{IDLE} and \texttt{CHARGING\_FOR\_CONTRACT} to \texttt{PICKING\_UP}, while in CNET the drone has to pass the \texttt{PROPOSED\_BID} state.
+
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=0.5\textwidth]{Drone}
+    \caption{A finite state machine of the drone agent (the black transitions and state only apply to CNET. The red transitions only to DynCNET and the green transitions only to CNCP and DynCNET)}
+    \label{fig:droneFSM}
+\end{figure}
+
+The drone starts of in the \texttt{IDLE} state. In this state, it will move to the closet warehouse. When it gets there, it will enter the \texttt{CHARGING} state and start charging. In CNET, a drone will enter the \texttt{PROPOSED\_BID} state once it has sent a bid to a client. It will reenter the \texttt{IDLE} state if the client declines or the \texttt{PICKING\_UP} state when the client accepts. In the \texttt{PICKING\_UP} state it will start moving to the cheapest warehouse. When it gets there, it will start charging until it is sufficiently charged or it is time to leave (because the deadline of the client is coming up). Once it has entered the \texttt{DELIVERING} state, it will keep on flying to the client until it has arrived, upon which it will deliver the package to the client and enter the \texttt{IDLE} state.
+
+\commentY{Ook FSM voor client beschrijven?}
+
+\commentY{Ook "biedingen" beter op FSM weergeven? Of dat laten voor sequence diagram}
+
+\taskS{Add sequence diagrams of 3 protocols (mss met kleuren werken om verschillen aan te duiden?). Best met zelfde kleuren als grafieken dan: CNET rood, CNCP groen en DynCNET blauw}
+
+\subsection{Contract Net} The two types of agents in our solution each fulfill a different role in CNET: Clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents\footnote{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}, as all drones are eligible. No bid specification is provided, as this is known by the drones. There is also no expiration time, as drones should bid as quickly as they can.
 
 When drones receive task announcements, they will calculate, for every warehouse, the estimated profit\footnote{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected\footnote{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter another state \texttt{PROPOSED\_BID} in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
 
@@ -124,7 +147,7 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
         \item hier de state machines? (of eerder bij design)
     \end{itemize}
     }
-\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving}
+\commentY{\cite{TentativeBidding}, \cite{LeveledCommitment}, \cite{CNETIterativeStandard}, zie ook \cite{DynCNET} Related work voor korte beschrijving, \cite{CNETStandard} is ook nog niet besproken bij theorie + afwijking die bij theorie al voorkomen ook nog eens herhalen?}
 
 \section{Experiments}
 \subsection{Setup}
@@ -134,7 +157,7 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
         \item other: battery drain, kost pakketjes, oplaadkost, ... (\texttt{Variables.kt} + \texttt{PackageType.kt})
     \end{itemize}}
 \subsection{Results}
-\commentY{Ook 95 \% Confidence interval (CI) op grafieken? Prof is daar precies fan van => Misschien beter om te doen. Ik ben niet 100\% zeker van correctheid, maar misschien wel, omdat CI daar slaagt op één test, niet op het verschil tussen 2 testen.}
+\commentY{Ook 95 \% Confidence interval (CI) op grafieken? Prof is daar precies fan van => Misschien beter om te doen. Ik ben niet 100\% zeker van correctheid, maar misschien wel, omdat het CI is van de variabele, niet het verschil tussen 2 variabelen. Dus zolang variabele normaal verdeeld is, is het waarschijnlijk wel ok.}
 \subsection{Analysis}
 
 \section{Conclusion}
