--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -82,7 +82,7 @@ Figure~\ref{fig:droneFSM} gives the FSM for the drone agent in the different pro
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=0.5\textwidth]{Drone}
+    \includegraphics[width=\columnwidth]{Drone}
     \caption{A finite state machine of the drone agent (the black transitions and state only apply to CNET. The red transitions only to DynCNET and the green transitions only to CNCP and DynCNET)}
     \label{fig:droneFSM}
 \end{figure}
@@ -159,6 +159,7 @@ moeten we verbreken contract bevestigen? zie DynCNET + CW566: 3.3. Synchronizati
 \subsection{Results}
 \commentY{Ook 95 \% Confidence interval (CI) op grafieken? Prof is daar precies fan van => Misschien beter om te doen. Ik ben niet 100\% zeker van correctheid, maar misschien wel, omdat het CI is van de variabele, niet het verschil tussen 2 variabelen. Dus zolang variabele normaal verdeeld is, is het waarschijnlijk wel ok.}
 \subsection{Analysis}
+\commentY{Reference Statistische modellen en data-analyse boek van Mia Hubert voor onze statischische methodologie}
 
 \section{Conclusion}
 \commentV{CW566: TABLE 1: INTERFACE DEFINITIONS FOR A TRANSPORT AGENT AND AN AGV AGENT
